--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <div class="container">
         <div class="top-part">
             <div class="left-content">
-                <p class="blue-text"><b>Thursday,</b> 10th </p>
-                <p class="month">December</p>
+                <p class="blue-text" id="current-date"></p>
+                <p class="month" id="current-month"></p>
             </div>
             <div class="right-content">
                 <p class="task">12 Tasks</p>
             </div>
         </div>
-        <div class="icon-div"><div class="icon">+</div></div>
-       <div class="list">
-        <div class="data">
+        <div class="icon-div"><div class="icon" id="btn">+</div></div>
+       <div class="list" id="list">
+        <div class="data-row">
             <input type="checkbox" class="checkbox">
-            <div class="details">
-                <del><p class="morning-text">Morning Run</p></del>
+            <div class="details ">
+                <p class="comments">Morning Run</p>
                 <p class="time">7:00 AM</p>
             </div>
         </div>
@@ -50,6 +50,6 @@
        </div>
     </div>
     
-    <script src="https://kit.fontawesome.com/f974a6b220.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
